# Scrapy

./: chocolates.json  main.py  pyproject.toml  scraping.py  scrapy.cfg
Scraping_Xpath/: 0_links.py
first_Scraper/: settings.py
first_Scraper/spiders/: chocolate.py
