[project]
name = "sky-resorts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "parsel>=1.10.0",
    "requests>=2.32.4",
    "scrapy>=2.13.3",
]
